syntax = "proto3";

import "zendesk/protobuf.proto";

/**
Should follow these 2 documents to design the ticket data.

https://developer.zendesk.com/rest_api/docs/core/tickets
https://github.com/zendesk/zendesk/blob/master/app/presenters/api/v2/tickets/ticket_presenter.rb
*/

package com.zendesk.maxwellsmarts.zendesk.ticketevents;
option java_multiple_files = true;

enum TicketStatus {
    UNKNOWN_TICKET_STATUS = 0;
    NEW = 1;
    OPEN = 2;
    PENDING = 3;
    HOLD = 4;
    SOLVED = 5;
    CLOSED = 6;
    DELETED = 7;
    ARCHIVED = 8;
}

message Comment {
    string text = 1;
    bool public = 2;
}

message TicketCreation {
    int64 requester_id = 1;
    TicketStatus status = 2;
    Comment comment = 3;
    int64 assignee_id = 4;
    int64 group_id = 5;
    string description = 6;
    string raw_subject = 7;
    repeated string tags = 8;
    int64 nice_id = 9;
}

message StatusChange {
    TicketStatus previous = 1;
    TicketStatus current = 2;
}

enum EventType {
    UNKNOWN_EVENT_TYPE = 0;
    TICKET_CREATION = 1;
    COMMENT_CREATION = 2;
    STATUS_CHANGE = 3;
    ASSIGNMENT_CHANGE = 4;
}

message TicketEvent {
    EventType event_type = 1;
    oneof event_data {
        TicketCreation ticket_creation = 2;
        Comment comment_creation = 3;
        StatusChange status_change = 4;
    }
}

message TicketEvents {
    int32 account_id = 5;
    int64 actor_id = 6;
    int64 ticket_id = 7;
    repeated TicketEvent events = 8;

    com.zendesk.protobuf.ProtobufHeader header = 2040;
    reserved 2041 to 2047;
}
